<resources>
    <string name="app_name">Мій магазин</string>
    <string name="click_me">Нажми мене</string>
    <string name="input_enter">Введіть значення</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnSirka">*</string>
    <string name="btn0">0</string>
    <string name="btnRishitka">#</string>
    <string name="btnPower">*</string>
    <string name="btnMinus">-</string>
    <string name="btnPlus">+</string>
    <string name="bntDivision">/</string>
    <string name="btnEqual">=</string>
    <string name="btnStar">*</string>
</resources>